<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_discovery">Discovery</string>
    <string name="text_search_prompt">What Pokemon are you looking for?</string>
    <string name="pokemon_search_hint">Enter Pokemon name</string>
    <string name="stats_title">STATS</string>
    <string name="stat_hp">HP: %d</string>
    <string name="stat_atk">ATTACK: %d</string>
    <string name="stat_def">DEFENSE: %d</string>
    <string name="stat_sp_atk">SP ATTACK: %d</string>
    <string name="stat_sp_def">SP DEFENSE: %d</string>
    <string name="add_pokedex">Pokedex</string>
    <string name="pokedex_deleted_message">%s deleted from your Pokedex!</string>
    <string name="pokedex_added_message">%s added to your Pokedex!</string>
    <string name="attacker_pokemon_prompt">Choose attacker Pokemon</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="calculator_button_text">Calculator</string>
    <string name="details_button_text">Details</string>
    <string name="defender_pokemon_prompt">Choose defender pokemon</string>
    <string name="pokemon_level_name">Lvl %d %s</string>
    <string name="stat_power">POWER: %d</string>
    <string name="damage_text_message">%d damage!</string>
    <string name="calculator_title_text">%s attacks %s!</string>
    <string name="calculator_return_button_text">Return</string>
    <string name="no_results_text">No results</string>
    <string name="pokedex_title_text">Your Pokedex</string>
    <string name="select_mode_hint_text">Tap to cancel</string>
    <string name="initial_splash_screen_description">Initial splash screen</string>
    <string name="empty_result_list_placeholder_description">Empty result list placeholder</string>
    <string name="search_button_description">Submit search query</string>
    <string name="pokedex_button_description">Add or remove Pokemon from Pokedex</string>
    <string name="close_pokemon_details_button_description">Close Pokemon details screen</string>
    <string name="pokemon_picture_description">Pokemon picture</string>
    <string name="progress_indicator_description">Loading results placeholder image</string>
</resources>