<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.itjuana.pokedex.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">

        <TextView
            android:id="@+id/text_search_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/text_search_prompt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pokemon_search_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/pokemon_search_hint"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toStartOf="@id/pokemon_search_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_search_prompt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pokemon_search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName|textNoSuggestions"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/pokemon_search_submit"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/pokemon_search_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pokemon_search_field"
            app:layout_constraintTop_toTopOf="@id/pokemon_search_field" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@id/pokemon_search_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/pokemon_item" />

        <LinearLayout
            android:id="@+id/no_results_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:orientation="vertical"
            app:pokemonSearchNoResults="@{viewModel.status}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_search_submit"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/pokeball"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon_search_field" />
            <!--            app:pokemonSearchNoResults="@{viewModel.status}" -->

            <TextView
                android:id="@+id/no_results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_results_text"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>